--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ report_draft.pdf
 .Trashes
 ehthumbs.db
 Thumbs.db
+Project/Report/Bifog 4-Maj.txt
+Project/Report/utkast till utkast till rapport.pdf
+Project/Report/utkast till utkast till rapport.tex
